; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_buffer_list_reset.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_buffer.c_buffer_list_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buffer_list = type { i64, i32*, %struct.buffer_entry* }
%struct.buffer_entry = type { i32, %struct.buffer_entry* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @buffer_list_reset(%struct.buffer_list* %0) #0 {
  %2 = alloca %struct.buffer_list*, align 8
  %3 = alloca %struct.buffer_entry*, align 8
  %4 = alloca %struct.buffer_entry*, align 8
  store %struct.buffer_list* %0, %struct.buffer_list** %2, align 8
  %5 = load %struct.buffer_list*, %struct.buffer_list** %2, align 8
  %6 = getelementptr inbounds %struct.buffer_list, %struct.buffer_list* %5, i32 0, i32 2
  %7 = load %struct.buffer_entry*, %struct.buffer_entry** %6, align 8
  store %struct.buffer_entry* %7, %struct.buffer_entry** %3, align 8
  br label %8

8:                                                ; preds = %11, %1
  %9 = load %struct.buffer_entry*, %struct.buffer_entry** %3, align 8
  %10 = icmp ne %struct.buffer_entry* %9, null
  br i1 %10, label %11, label %21

11:                                               ; preds = %8
  %12 = load %struct.buffer_entry*, %struct.buffer_entry** %3, align 8
  %13 = getelementptr inbounds %struct.buffer_entry, %struct.buffer_entry* %12, i32 0, i32 1
  %14 = load %struct.buffer_entry*, %struct.buffer_entry** %13, align 8
  store %struct.buffer_entry* %14, %struct.buffer_entry** %4, align 8
  %15 = load %struct.buffer_entry*, %struct.buffer_entry** %3, align 8
  %16 = getelementptr inbounds %struct.buffer_entry, %struct.buffer_entry* %15, i32 0, i32 0
  %17 = call i32 @free_buf(i32* %16)
  %18 = load %struct.buffer_entry*, %struct.buffer_entry** %3, align 8
  %19 = call i32 @free(%struct.buffer_entry* %18)
  %20 = load %struct.buffer_entry*, %struct.buffer_entry** %4, align 8
  store %struct.buffer_entry* %20, %struct.buffer_entry** %3, align 8
  br label %8

21:                                               ; preds = %8
  %22 = load %struct.buffer_list*, %struct.buffer_list** %2, align 8
  %23 = getelementptr inbounds %struct.buffer_list, %struct.buffer_list* %22, i32 0, i32 1
  store i32* null, i32** %23, align 8
  %24 = load %struct.buffer_list*, %struct.buffer_list** %2, align 8
  %25 = getelementptr inbounds %struct.buffer_list, %struct.buffer_list* %24, i32 0, i32 2
  store %struct.buffer_entry* null, %struct.buffer_entry** %25, align 8
  %26 = load %struct.buffer_list*, %struct.buffer_list** %2, align 8
  %27 = getelementptr inbounds %struct.buffer_list, %struct.buffer_list* %26, i32 0, i32 0
  store i64 0, i64* %27, align 8
  ret void
}

declare dso_local i32 @free_buf(i32*) #1

declare dso_local i32 @free(%struct.buffer_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
